add: first final version, services, reception, and missionary pages

--- a/css/large.css
+++ b/css/large.css
@@ -143,4 +143,56 @@ li.dropmenu > div > a {
     grid-column: span 4;
     grid-row: 2;
 }
+
+/* ------------------------------------------------------------ */
+/* SERVICES PAGE */
+.services-main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    margin: 5rem auto;
+    gap: 5rem;
+}
+
+.services-main h1 {
+    margin-top: 0;
+}
+
+/* ------------------------------------------------------------ */
+/* RECEPTION PAGE */
+.reception-main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    margin: 5rem auto;
+    gap: 5rem;
+}
+
+.reception-main h1 {
+    margin-top: 0;
+}
+
+/* ------------------------------------------------------------ */
+/* MISSIONARY */
+.missionaries-main {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    align-items: center;
+    margin: 5rem auto;
+    column-gap: 5rem;
+}
+
+.missionaries-main h1 {
+    margin-top: 0;
+}
+
+.suite-gallery-title {
+    grid-column: span 2;
+    padding-top: 5rem;
+}
+
+.suite-gallery {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
 }
